# co_pumps_controller_esp32s3

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  co_pumps_ctrl.code-workspace  partitions.csv  sdkconfig  sdkconfig.old
components/bsp/: CMakeLists.txt  Kconfig.projbuild  bsp.h
components/config/: CMakeLists.txt
components/config/include/: resource_config.h
components/controller/: CMakeLists.txt  controller.cpp  controller.hpp  controller_c_export.h
components/display/: CMakeLists.txt  display_drv.c  display_ui.cpp  idf_component.yml  touch_drv.c
components/display/include/: display_drv.h  display_ui.hpp  display_ui_c_export.h  display_ui_messages.h  touch_drv.h
components/pumps/: CMakeLists.txt  pumps.cpp  pumps.hpp  pumps_c_export.h
components/temperatures/: CMakeLists.txt  temperatures.cpp  temperatures.hpp  temperatures_c_export.h
components/tinyfsm/: CMakeLists.txt
components/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h
components/ui/components/: ui_comp.h  ui_comp_floorsettingscomponent.c  ui_comp_floorsettingscomponent.h  ui_comp_homepumpstatuscomponent.c  ui_comp_homepumpstatuscomponent.h  ui_comp_hook.c  ui_comp_hook.h
components/ui/my_ui_events/: screen_home_events.c  screen_home_events.cpp
components/ui/my_ui_events_actions/: screen_home_events_actions.cpp
components/ui/my_ui_events_actions/include/: screen_home_events_actions.hpp
components/ui/screens/: ui_ScreenHome.c
gen_tools/SquareLineStudio/: SquareLine_Project.sll  SquareLine_Project.spj  SquareLine_Project_events.py
gen_tools/SquareLineStudio/components/: FloorSettingsComponent.ecomp  (+1 more)
main/: CMakeLists.txt  idf_component.yml  main.c
scripts/: ui_generate_idf_cmakelists.py
(+5 files in other folders)
